clean up, fix dark mode toggle

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -78,7 +78,10 @@ h4 {
 }
 
 a {
-  color: inherit;
+  color: var(--light-color);
+  :global .dark-theme :local & {
+    color: var(--dark-color);
+  }
 }
 
 img {
