--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,7 +3,7 @@
   --light-background: #fff;
   --light-background-secondary: #eaeaea;
   --light-header-background: #caccce;
-  --light-color: #222;
+  --light-color: #222 !important;
   --light-color-secondary: #999;
   --light-border-color: #dcdcdc;
 
@@ -11,7 +11,7 @@
   --dark-background: #292a2d;
   --dark-background-secondary: #3b3d42;
   --dark-header-background: #191a1a;
-  --dark-color: #d2d2da;
+  --dark-color: #d2d2da !important;
   --dark-color-secondary: #73747b;
   --dark-border-color: #4a4b50;
 
